完善初始化sql, 完善演示的示例, 提供新的前端授权项目.